--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -56,25 +56,24 @@
               <p>{{blog.blog}}</p>
               <br><br>
               {% if user.name %}
-              <div id="postlike">
-
-                  {% if isLiked %}
+                    <div id="postlike">
+                        {% if isLiked(user, blog, likes) == True %}
+                                  <form method="post">
+                                    <input type="hidden" value="{{blog.key.id()}}" name="dislike"/>
+                                    <button type="submit" id="like" class="btn btn-default btn-sm">
+                                      <span class="glyphicon glyphicon-thumbs-up"></span> Like
+                                    </button>
+                                  </form>
+                        {% else %}
                             <form method="post">
-                              <input type="hidden" value="{{blog.key.id()}}" name="dislike"/>
-                              <button type="submit" id="like" class="btn btn-default btn-sm">
-                                <span class="glyphicon glyphicon-thumbs-up"></span> Like
-                              </button>
-                            </form>
-                  {% else %}
-                      <form method="post">
-                              <input type="hidden" value="{{blog.key.id()}}" name="like_blog"/>
-                              <button type="submit" class="btn btn-default btn-sm">
-                                <span class="glyphicon glyphicon-thumbs-up"></span> Like
-                              </button>
-                            </form>
-                  {% endif %}
-                  <span class="likes">{{ blog.likes | length }} likes</span>
-              </div>
+                                    <input type="hidden" value="{{blog.key.id()}}" name="like_blog"/>
+                                    <button type="submit" class="btn btn-default btn-sm">
+                                      <span class="glyphicon glyphicon-thumbs-up"></span> Like
+                                    </button>
+                                  </form>
+                        {% endif %}
+                        <span class="likes">{{ blog.likes | length }} likes</span>
+                    </div>
               {% endif %}
               <br><br>
               <p><span class="badge"></span> Comments:</p><hr>
@@ -104,3 +103,14 @@
     </div>
       </div>
 {% endblock %}
+<script>
+$.ajax({
+    type: "POST",
+    url: "http://localhost:8080/",
+    contentType: "application/json; charset=utf-8",
+    data: data,
+    success: function(data) {
+        alert("AJAX done");
+    }
+});
+</script>
