--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -30,7 +30,7 @@
   <div class="col-sm-7">
     <h4></h4>
       <div class="well">
-      <h4>You are successfully logged out!</h4>
+      <h4>404 not found </h4>
   </div>
       </div>
 {% endblock %}
